# wiki-edit-sentiment-geo

./: CONTRIBUTORS.md  README.md  dashboard.go  go.mod  main.go  main.py
data/: political_categories.json  topic_categories.json
part1.commit-semantic-evolution/: README.md  dashboard.go  go.mod  main.go  main.py  pyproject.toml  setup.py
part1.commit-semantic-evolution/data/: categories.json  topic_categories.json
part1.commit-semantic-evolution/queries/: query.sparql
part1.commit-semantic-evolution/scripts/: get_articles.py  get_revisions.py  init_db.py
scripts/: compare_labels.py  get_articles.py  get_revisions.py  init_db.py
